chores(config): set up for prod deploy

--- a/OneDayOnePlant-Backend/docker-compose.yml
+++ b/OneDayOnePlant-Backend/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     env_file: .env
     build: 
       context: .
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile
     depends_on: 
       - mongo
     volumes:
